[gd_scene load_steps=4 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://Moon/Moon.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 100.0

[node name="Moon" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -32, -32, 32, -32, 32, 32, -32, 32 )

[node name="Line2D" type="Line2D" parent="."]
visible = false
points = PoolVector2Array( 0, 0, 0, 0 )

[node name="Hurtbox" type="Area2D" parent="."]

[node name="DashCollision" type="CollisionPolygon2D" parent="Hurtbox"]
visible = false
polygon = PoolVector2Array( 0, 0, 0, 0, 0, 0, 0, 0 )
disabled = true

[node name="AttackCollision" type="CollisionShape2D" parent="Hurtbox"]
visible = false
shape = SubResource( 1 )
disabled = true

[node name="DashTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true
[connection signal="timeout" from="DashTimer" to="." method="_on_DashTimer_timeout"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_AttackTimer_timeout"]
